tests/NormalTests/paczka1/fuzzy1/42622927.err
Error in line 6: Gmz S384 10,4
Error in line 14: T4ObcS S922 10,4
Error in line 24: gmwna7A0 A972 5,43
Error in line 23: gmwna7A0 S922 42,8
Error in line 35: S922 S384 93,4
Error in line 33: gmwna7A0 A972 25,8
